logs/Slang/chapter-6/6.18--typedef.sv.log
name: typedef
description: user types tests
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.18--typedef.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.18--typedef.sv:8:9: error: expected identifier
	typedef wire wire_t;
	       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.18--typedef.sv:8:10: error: expected data type (implicit type name not allowed)
	typedef wire wire_t;
	        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.18--typedef.sv:10:2: error: 'wire_t' is not a type
	wire_t a;
	^~~~~~
